--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0",
     "monk": "https://github.com/vccabral/monk.git",
-    "mongodb": "~2.0.33"
+    "mongodb": "~2.0.33",
+    "threerest": "https://github.com/wmoulin/threerest.git"
   },
   "peerDependencies": {
     "mongodb": ">= 1.4"
